====================
Bazaar Release Notes
====================

.. contents::

bzr 0.91 series
===============

  BUG FIXES:

   * Print a warning instead of aborting the ``python setup.py install``
     process if building of a C extension is not possible.
     (Lukáš Lalinský, Alexander Belchenko)

bzr 0.91rc2 2007-09-11
======================

   * Replaced incorrect tarball for previous release; a debug statement was left 
     in bzrlib/remote.py.

bzr 0.91rc1 2007-09-11
======================

  CHANGES:

   * The default branch and repository format has changed to 
     ``dirstate-tags``, so tag commands are active by default.
     This format is compatible with Bazaar 0.15 and later.
     This incidentally fixes bug #126141.
     (Martin Pool)

   * ``--quiet`` or ``-q`` is no longer a global option. If present, it
     must now appear after the command name. Scripts doing things like
     ``bzr -q missing`` need to be rewritten as ``bzr missing -q``.
     (Ian Clatworthy)

  FEATURES:

   * New option ``--author`` in ``bzr commit`` to specify the author of the
     change, if it's different from the committer. ``bzr log`` and
     ``bzr annotate`` display the author instead of the committer.
     (Lukáš Lalinský)

   * In addition to global options and command specific options, a set of
     standard options are now supported. Standard options are legal for
     all commands. The initial set of standard options are:
     
     * ``--help`` or ``-h`` - display help message
     * ``--verbose`` or ``-v`` - display additional information
     * ``--quiet``  or ``-q`` - only output warnings and errors.

     Unlike global options, standard options can be used in aliases and
     may have command-specific help. (Ian Clatworthy)

   * Verbosity level processing has now been unified. If ``--verbose``
     or ``-v`` is specified on the command line multiple times, the
     verbosity level is made positive the first time then increased.